hard-gists/0d5a709bbb4186d1f45f2af14c65b110/run.log
=== Docker Run Log for 0d5a709bbb4186d1f45f2af14c65b110 ===
Started at: Mi 29. Okt 11:42:11 CET 2025

[2025-10-29 11:42:11] START: Running container for 0d5a709bbb4186d1f45f2af14c65b110
[2025-10-29 11:42:11] SUCCESS: Container aebcddb36a48e66a3429c10be211333e3354020ee57289b199e5a0731851c970 started for 0d5a709bbb4186d1f45f2af14c65b110
=== Container logs for 0d5a709bbb4186d1f45f2af14c65b110 ===
  File "/snippet.py", line 155
    print 'No image picked'
    ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 0d5a709bbb4186d1f45f2af14c65b110 ===
[2025-10-29 11:42:13] INFO: Container aebcddb36a48e66a3429c10be211333e3354020ee57289b199e5a0731851c970 has stopped
